Fixed <main> width being limited on small screens

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -56,6 +56,12 @@ main.full-width-main {
 	width: initial;
 }
 
+@media only screen and (max-width: 650px) {
+	main {
+		width: initial;
+	}
+}
+
 
 
 /* Links */
